Import a delay module

--- a/src/project.conf
+++ b/src/project.conf
@@ -1,6 +1,13 @@
-targets=counter.vvp
-dist=Makefile
+targets=counter.vvp,delay.vvp
+dist=Makefile,system.v
 
 [counter.vvp]
 type=object
 sources=counter.v
+
+[delay.vvp]
+type=object
+sources=delay.v
+
+[delay.v]
+depends=system.v
