--- a/project.conf
+++ b/project.conf
@@ -1,5 +1,14 @@
 package=libFPGA
 version=0.0.0
 
-subdirs=src
+subdirs=src,tests
+targets=tests
 dist=Makefile,README.md
+
+#targets
+[tests]
+type=command
+command=cd tests && (if [ -n "$(OBJDIR)" ]; then $(MAKE) OBJDIR="$(OBJDIR)tests/" "$(OBJDIR)tests/fixme.log"; else $(MAKE) fixme.log; fi)
+depends=all
+enabled=0
+phony=1
